--- a/knowledge.html
+++ b/knowledge.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="container">
 		<h1>这是知识碎片</h1>
-		<a class="item" href="flexbox.html">
+		<a class="item" href="./article/flexbox.html">
 			<div class="topic">
 				<div class="topic-main">移动端flexbox布局</div>
 				<div class="topic-footer">
